--- a/app/src/main/res/layout/fragment_calendario.xml
+++ b/app/src/main/res/layout/fragment_calendario.xml
@@ -15,37 +15,35 @@
             android:id="@+id/inputTitulo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Título del evento"
+            android:hint="@string/titulo"
             android:layout_marginBottom="16dp"/>
 
         <EditText
             android:id="@+id/inputLugar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Lugar del evento"
+            android:hint="@string/lugar"
             android:layout_marginBottom="16dp"/>
 
         <EditText
             android:id="@+id/inputFechaHora"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Fecha y hora de recordatorio
-
-            (ej: 2025-10-03 15:00)"
+            android:hint="@string/fecha_y_hora"
             android:layout_marginBottom="16dp"/>
 
         <EditText
             android:id="@+id/descripcionEvento"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Descripción del evento"
+            android:hint="@string/descripcion"
             android:layout_marginBottom="24dp"/>
 
         <Button
             android:id="@+id/boton_calendario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Crear evento en calendario"/>
+            android:text="@string/boton_crear_evento"/>
 
     </LinearLayout>
 </ScrollView>
